--- a/onlineMobileShop/src/main/resources/application.properties
+++ b/onlineMobileShop/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url = jdbc:mysql://localhost:3306/paf?useSSL=false
+spring.datasource.data-username= root
+spring.datasource.data-password= 1362
 
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
